sumo/tests/sumo/spec/departure/errors/speed_given100/rawdump.sumo
<?xml version="1.0"?>

<!-- generated on Mon Dec 20 10:50:12 2010 by SUMO sumo Version dev-SVN-r9480
<?xml version="1.0" encoding="iso-8859-1"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.sf.net/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <additional-files value="input_routes.rou.xml,input_additional.add.xml"/>
    </input>

    <output>
        <netstate-dump value="rawdump.xml"/>
    </output>

    <time>
        <begin value="0"/>
        <end value="0"/>
    </time>

    <report>
        <no-duration-log value="true"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<sumo-netstate>
</sumo-netstate>
